fix: Reorganizando a estrutura de pastas de roles